--- a/Learning CSS Grid/index.html
+++ b/Learning CSS Grid/index.html
@@ -18,6 +18,51 @@
             FOOTER      (abajo del todo y ocupe el !00%)
         -->
         
+        <div id="website-areas">
+            <header id ="cabecera">
+                <h1>WEB CON AREAS</h1>
+            </header>
+            <nav id="menu">
+                <ul>
+                    <li> <a href="#">Inicio</a> </li>
+                    <li> <a href="#">Página 1</a> </li>
+                    <li> <a href="#">Página 2</a> </li>
+                    <li> <a href="#">Página 3</a> </li>
+                    <li> <a href="#">Contacto</a> </li>
+                </ul>
+            </nav>
+
+            <section id="contenido">
+                <article>  
+                    Articulo 1
+                </article>
+                <article>  
+                    Articulo 2
+                </article>
+                <article>  
+                    Articulo 3
+                </article>
+                <article>  
+                    Articulo 4
+                </article>
+                <article>  
+                    Articulo 5
+                </article>
+            </section>
+
+            <aside id="lateral">
+                <h2>Barra lateral</h2>
+            </aside>
+
+            <footer id="pie-pagina">
+                Master en CSS - Ivan Pacheco &copy;
+            </footer>
+        </div>
+
+
+        <hr>
+
+
         <div id="website">
             <header id ="cabecera">
                 <h1>Titulo de mi web</h1>
