--- a/Learning Bootstrap/index.html
+++ b/Learning Bootstrap/index.html
@@ -7,10 +7,28 @@
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
-        <div class="mi-web w-75 m-auto border border-danger p-5">
+        <!-- <div class="mi-web w-75 m-auto border border-danger p-5">
             <h1>Aprendiendo Bootstrap</h1>
             <h2>Bienvenido a las clases de este framework para CSS</h2>
             <button class="btn btn-success">Hola soy un boton</button>
+        </div> -->
+
+        <div class="container border">
+            <div class="row">
+                <header id="header" class="col-12 bg-primary text-white p-2">
+                    <h1>Aprendiendo Bootstrap</h1>
+                </header>
+
+                <nav id="menu" class="col-12 bg-secondary text-white">
+                    <ul class="row w-50">
+                        <li class="col">Inicio</li>
+                        <li class="col">Pagina 1</li>
+                        <li class="col">Pagina 2</li>
+                        <li class="col">Pagina 3</li>
+                        <li class="col">Contacto</li>
+                    </ul>
+                </nav>
+            </div>
         </div>
 
 
