--- a/Learning Bootstrap/index.html
+++ b/Learning Bootstrap/index.html
@@ -71,6 +71,22 @@
                                         Producto
                                     </div>
                                 </div>
+
+                                <div class="row">
+                                    <div class="item col-2 bg-primary offset-1">
+                                        Producto
+                                    </div>
+                                    <div class="item col-2 bg-warning offset-1">
+                                        Producto
+                                    </div>
+                                    <div class="item col-2 bg-danger offset-1">
+                                        Producto
+                                    </div>
+                                    <div class="item col-2 bg-danger offset-1">
+                                        Producto
+                                    </div>
+                                </div>
+                                
                             </div>
                         </section>
                         <aside class="col-3 border">
