--- a/Learning Bootstrap/index.html
+++ b/Learning Bootstrap/index.html
@@ -13,7 +13,7 @@
             <button class="btn btn-success">Hola soy un boton</button>
         </div> -->
 
-        <div class="container border">
+        <div class="container-fluid border">
             <div class="row">
                 <header id="header" class="col-12 bg-primary text-white p-2">
                     <h1>Aprendiendo Bootstrap</h1>
@@ -21,11 +21,11 @@
 
                 <nav id="menu" class="col-12 bg-secondary text-white">
                     <ul class="row w-50">
-                        <li class="col">Inicio</li>
-                        <li class="col">Pagina 1</li>
-                        <li class="col">Pagina 2</li>
-                        <li class="col">Pagina 3</li>
-                        <li class="col">Contacto</li>
+                        <li class="col-xs-12 col-sm-12 col-md">Inicio</li>
+                        <li class="col-xs-12 col-sm-12 col-md">Pagina 1</li>
+                        <li class="col-xs-12 col-sm-12 col-md">Pagina 2</li>
+                        <li class="col-xs-12 col-sm-12 col-md">Pagina 3</li>
+                        <li class="col-xs-12 col-sm-12 col-md">Contacto</li>
                     </ul>
                 </nav>
 
@@ -34,7 +34,20 @@
                         <section id="products" class="col-9 border">
                             <h2>Productos</h2>
                             <hr>
-                            <div class="items row">
+                            <div class="items">
+
+                                <div class="row">
+                                    <div class="item col col-lg col-md-12 col-sm-12 bg-primary ">
+                                        Producto
+                                    </div>
+                                    <div class="item col col-lg col-md-6 col-sm-6 bg-warning ">
+                                        Producto
+                                    </div>
+                                    <div class="item col col-lg col-md-6 col-sm-6 bg-danger ">
+                                        Producto
+                                    </div>
+                                </div>
+
                                 <div class="row">
                                     <div class="item col bg-primary m-2">
                                         Producto
