--- a/Learning Bootstrap/index.html
+++ b/Learning Bootstrap/index.html
@@ -20,7 +20,7 @@
                     <h1>Aprendiendo Bootstrap</h1>
                 </header>
 
-                <nav id="menu" class="col-12 bg-secondary text-white">
+                <nav id="menu" class="col-12 bg-secondary text-white d-none d-sm-none d-md-block">
                     <ul class="row w-50">
                         <li class="col-xs-12 col-sm-12 col-md">Inicio</li>
                         <li class="col-xs-12 col-sm-12 col-md">Pagina 1</li>
@@ -32,7 +32,7 @@
 
                 <section id="content" class="col-12">
                     <div class="row">
-                        <section id="products" class="col-9 border">
+                        <section id="products" class="col-12 col-sm-12 col-md-9 border">
                             <h2>Productos</h2>
                             <hr>
                             <div class="items">
@@ -103,7 +103,7 @@
                                 
                             </div>
                         </section>
-                        <aside class="col-3 border">
+                        <aside class="col-3 border d-none d-sm-none d-md-block">
                             <h2>Barra lateral</h2>
                             <div class="lateral row bg-light align-items-center">
                                 <div class="col-4 bg-primary order-3">
