--- a/Learning Bootstrap/herramientas.html
+++ b/Learning Bootstrap/herramientas.html
@@ -11,9 +11,18 @@
         <div class="container" style="height: 500px;">
             <h1>Herramientas disponibles en Bootstrap 4</h1>
             <hr>
-            <div class="caja w-25 h-25 border border-success rounded-0">
+            <div class="float-left float-sm-none float-md-left caja w-25 h-25 border border-success rounded-0 ">
                 Esto es una caja 
             </div>
+            <div class="float-left caja w-25 h-25 border border-primary rounded-0">
+                Esto es una caja 
+            </div>
+            <div class="float-left caja w-25 h-25 border border-dark rounded-0">
+                Esto es una caja 
+            </div>
+            <div class="clearfix"></div>
+
+            <h2>Este es el fin del contenedor</h2>
         </div>
 
         <script type="text/javascript" src="jquery/jquery-3.6.0.min.js"></script>
