--- a/Learning Bootstrap/componentes.html
+++ b/Learning Bootstrap/componentes.html
@@ -67,10 +67,21 @@
                 </header>
 
             </div>
+
+            <div class="row">
+              <div class="col-md-8 mt-3">
+                <div class="alert  alert-danger fade show">
+                  <strong>Increible!</strong> te haz registrado correctamente :)
+
+                  <button type="button" class="close" data-dismiss="alert">
+                      <span>&times;</span>
+                  </button>
+                </div>
+
+              </div>
+            </div>
+
         </div>
-
-
-
         <script type="text/javascript" src="jquery/jquery-3.6.0.min.js"></script>
         <script type="text/javascript" src="bootstrap/js/bootstrap.min.js"></script>
     </body>
