--- a/Learning Bootstrap/componentes.html
+++ b/Learning Bootstrap/componentes.html
@@ -70,6 +70,23 @@
 
             <div class="row">
               <div class="col-md-8 mt-3">
+
+                <nav aria-label="breadcrumb">
+                  <ol class="breadcrumb">
+                    <li class="breadcrumb-item">
+                      <a href="#">Inicio</a>
+                    </li>
+                    <li class="breadcrumb-item">
+                      <a href="#">Desarrollo Web</a>
+                    </li>
+                    <li class="breadcrumb-item">
+                      <a href="#">Componentes de Bootstrap 4</a>
+                    </li>
+                  </ol>
+                </nav>
+
+
+
                 <div class="alert  alert-danger fade show">
                   <strong>Increible!</strong> te haz registrado correctamente :)
 
