--- a/Learning Bootstrap/componentes.html
+++ b/Learning Bootstrap/componentes.html
@@ -209,13 +209,13 @@
         }, 1000);
       </script>
 
-      <button type="button" class="btn-tool btn btn-danger mt-3" data-placement="bottom" title="Si das click sacaras una alerta">
+      <button type="button" class="btn-tool btn btn-danger mt-3" data-toggle="tooltip" data-placement="bottom" title="Si das click sacaras una alerta">
         Alerta
       </button>
-      <button type="button" class="btn-tool btn btn-warning mt-3" data-placement="right" title="Si das click sacaras una alerta">
+      <button type="button" class="btn-tool btn btn-warning mt-3" data-toggle="tooltip" data-placement="right" title="Si das click sacaras una alerta">
         Alerta 2
       </button>
-      <button type="button" class="btn-tool btn btn-info mt-3" data-placement="top" title="Si das click sacaras una alerta">
+      <button type="button" class="btn-pop btn btn-info mt-3" data-container="body" data-toggle="popover" data-placement="bottom" title="Hola" data-content="Esto es un popover">
         Alerta 3
       </button>
 
@@ -326,6 +326,7 @@
         });
 
         $(".btn-tool").tooltip();
+        $(".btn-pop").popover();
       });
     </script>
 </body>
